--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -489,6 +489,14 @@ lem = 16px;
     opacity: 1;
     transform: translate(0); } }
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transfrom: translate(-50%, -50%) scale(0.25); }
+  100% {
+    opacity: 1;
+    transfrom: translate(-50%, -50%) scale(1); } }
+
 *,
 *::after,
 *::before {
@@ -638,6 +646,113 @@ body {
   @media only screen and (max-width: 37.5em) {
     .u-margin-top-huge {
       margin-top: 5rem !important; } }
+
+.popup {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .3s;
+  transform: translateX(100vw); }
+  @supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
+    .popup {
+      -webkit-backdrop-filter: blur(10px);
+      backdrop-filter: blur(10px);
+      background-color: rgba(0, 0, 0, 0.3); } }
+  .popup__content {
+    width: 75%;
+    border-radius: 3px;
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.25);
+    transition: all .5s .2s; }
+  .popup__left {
+    display: table-cell;
+    vertical-align: middle;
+    width: 33.33333%; }
+  .popup__right {
+    display: table-cell;
+    vertical-align: middle;
+    width: 66.66667%;
+    padding: 3rem 5rem; }
+  .popup__img {
+    display: block;
+    width: 100%; }
+  .popup__text {
+    font-size: 1.4rem;
+    margin-bottom: 4rem;
+    -moz-column-count: 2;
+    -moz-column-gap: 4rem;
+    -moz-column-rule: 1px solid #eee;
+    column-count: 2;
+    column-gap: 4rem;
+    column-rule: 1px solid #eee;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto; }
+  .popup:target {
+    opacity: 1;
+    visibility: visible;
+    transform: translate(0); }
+  .popup__close:link, .popup__close:visited {
+    color: #777;
+    font-size: 3rem;
+    position: absolute;
+    top: 2.5rem;
+    right: 2.5rem;
+    line-height: 1;
+    transition: all .3s; }
+  .popup__close:hover {
+    color: #55c57a; }
+  .popup:target .popup__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1); }
+  @media only screen and (max-width: 56.25em) {
+    .popup__left {
+      display: block;
+      width: 100%;
+      overflow: hidden; }
+      .popup__left::after {
+        content: "";
+        clear: both;
+        display: table; }
+    .popup__img {
+      float: left;
+      width: 50%; }
+    .popup__close:link, .popup__close:visited {
+      color: #fff;
+      font-size: 5rem;
+      top: 1.5rem;
+      right: 1.5rem; }
+    .popup__text {
+      font-size: 1.8rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .popup__content {
+      width: 90%; }
+    .popup__right {
+      padding: 2rem; }
+    .popup__img {
+      display: none; }
+    .popup__close:link, .popup__close:visited {
+      color: #777;
+      top: .5rem;
+      right: .5rem; }
+    .popup__text {
+      columns: unset;
+      height: 30vh;
+      overflow: auto; } }
 
 .btn, .btn:link, .btn:visited {
   text-transform: uppercase;
@@ -1126,111 +1241,6 @@ body {
     height: 100%;
     width: 100%;
     object-fit: cover; }
-
-.popup {
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.8);
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 9999;
-  opacity: 0;
-  visibility: hidden;
-  transition: all, .3s; }
-  @supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
-    .popup {
-      -webkit-backdrop-filter: blur(10px);
-      backdrop-filter: blur(10px);
-      background-color: rgba(0, 0, 0, 0.3); } }
-  .popup__content {
-    width: 75%;
-    border-radius: 3px;
-    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
-    background-color: #fff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    overflow: hidden;
-    opacity: 0;
-    transform: translate(-50%, -50%) scale(0.25);
-    transition: all .5s .2s; }
-  .popup__left {
-    display: table-cell;
-    vertical-align: middle;
-    width: 33.33333%; }
-  .popup__right {
-    display: table-cell;
-    vertical-align: middle;
-    width: 66.66667%;
-    padding: 3rem 5rem; }
-  .popup__img {
-    display: block;
-    width: 100%; }
-  .popup__text {
-    font-size: 1.4rem;
-    margin-bottom: 4rem;
-    -moz-column-count: 2;
-    -moz-column-gap: 4rem;
-    -moz-column-rule: 1px solid #eee;
-    column-count: 2;
-    column-gap: 4rem;
-    column-rule: 1px solid #eee;
-    -moz-hyphens: auto;
-    -ms-hyphens: auto;
-    -webkit-hyphens: auto;
-    hyphens: auto; }
-  .popup:target {
-    opacity: 1;
-    visibility: visible; }
-  .popup__close:link, .popup__close:visited {
-    color: #777;
-    font-size: 3rem;
-    position: absolute;
-    top: 2.5rem;
-    right: 2.5rem;
-    line-height: 1;
-    transition: all .3s; }
-  .popup__close:hover {
-    color: #55c57a; }
-  .popup:target .popup__content {
-    opacity: 1;
-    transform: translate(-50%, -50%) scale(1); }
-  @media only screen and (max-width: 56.25em) {
-    .popup__left {
-      display: block;
-      width: 100%;
-      overflow: hidden; }
-      .popup__left::after {
-        content: "";
-        clear: both;
-        display: table; }
-    .popup__img {
-      float: left;
-      width: 50%; }
-    .popup__close:link, .popup__close:visited {
-      color: #fff;
-      font-size: 5rem;
-      top: 1.5rem;
-      right: 1.5rem; }
-    .popup__text {
-      font-size: 1.8rem; } }
-  @media only screen and (max-width: 37.5em) {
-    .popup__content {
-      width: 90%; }
-    .popup__right {
-      padding: 2rem; }
-    .popup__img {
-      display: none; }
-    .popup__close:link, .popup__close:visited {
-      color: #777;
-      top: .5rem;
-      right: .5rem; }
-    .popup__text {
-      columns: unset;
-      height: 30vh;
-      overflow: auto; } }
 
 .row {
   max-width: 114rem;
