--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -41,3 +41,15 @@
 		transform: translate(0);
 	}
 }
+
+@keyframes fadeIn {
+	0% {
+		opacity: 0;
+		transfrom: translate(-50%, -50%) scale(.25);
+	}
+
+	100% {
+		opacity: 1;
+		transfrom: translate(-50%, -50%) scale(1);
+	}
+}
