--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -11,7 +11,8 @@
     z-index: 9999;
     opacity: 0;
     visibility: hidden;
-    transition: all, .3s;
+    transition: opacity .3s;
+    transform: translateX(100vw);
 
     @supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
         -webkit-backdrop-filter: blur(10px);
@@ -71,6 +72,7 @@
     &:target {
         opacity: 1;
         visibility: visible;
+        transform: translate(0);
     }
 
     &__close {
